
pkginclude_HEADERS = \
	ipmi_addr.h  ipmi_entity.h  ipmi_lan.h  ipmi_sel.h     ipmi_types.h   \
	ipmi_bits.h  ipmi_err.h     ipmi_mc.h   ipmi_sensor.h  ipmiif.h	      \
	ipmi_conn.h  ipmi_int.h     ipmi_sdr.h  ipmi_smi.h     os_handler.h   \
	selector.h   ipmi_auth.h    ipmi_oem.h  ipmi_msgbits.h ipmi_control.h \
	ipmi_fru.h   ipmi_ui.h      ipmi_log.h  ipmi_domain.h  lanserv.h      \
	opq.h	     ilist.h        md2.h       md5.h	       mxp.h	      \
	ipmi_pef.h   ipmi_lanparm.h ipmi_pet.h  ipmi_event.h   ipmi_malloc.h  \
	ipmi_locks.h ipmi_posix.h   ipmi_picmg.h
