
internalincludedir = $(pkgincludedir)/internal
internalinclude_HEADERS = \
	ilist.h		ipmi_entity.h  ipmi_malloc.h  ipmi_sensor.h  md2.h \
	ipmi_control.h	ipmi_int.h     ipmi_mc.h      ipmi_utils.h   md5.h \
	ipmi_domain.h	ipmi_locks.h   ipmi_sel.h     locked_list.h  opq.h \
	ipmi_event.h	ipmi_oem.h     ipmi_fru.h

uninstall-local:
	-rmdir $(internalincludedir)